// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query getDefaultQuery should allow config overrides for default query 1`] = `
Object {
  "bikeSpeed": 3.58,
  "date": "2019-08-04",
  "departArrive": "NOW",
  "endTime": "09:00",
  "from": null,
  "ignoreRealtimeUpdates": false,
  "intermediatePlaces": Array [],
  "maxBikeDistance": 4828,
  "maxBikeTime": 20,
  "maxEScooterDistance": 4828,
  "maxWalkDistance": 3219,
  "maxWalkTime": 15,
  "mode": "WALK,TRANSIT",
  "numItineraries": 3,
  "optimize": "QUICK",
  "optimizeBike": "SAFE",
  "otherThanPreferredRoutesPenalty": 900,
  "routingType": "ITINERARY",
  "showIntermediateStops": true,
  "startTime": "07:00",
  "time": "19:34",
  "to": null,
  "watts": 250,
  "wheelchair": false,
}
`;

exports[`query getDefaultQuery should return default query 1`] = `
Object {
  "bikeSpeed": 3.58,
  "date": "2019-08-04",
  "departArrive": "NOW",
  "endTime": "09:00",
  "from": null,
  "ignoreRealtimeUpdates": false,
  "intermediatePlaces": Array [],
  "maxBikeDistance": 4828,
  "maxBikeTime": 20,
  "maxEScooterDistance": 4828,
  "maxWalkDistance": 1609,
  "maxWalkTime": 15,
  "mode": "WALK,TRANSIT",
  "numItineraries": 3,
  "optimize": "QUICK",
  "optimizeBike": "SAFE",
  "otherThanPreferredRoutesPenalty": 900,
  "routingType": "ITINERARY",
  "showIntermediateStops": true,
  "startTime": "07:00",
  "time": "19:34",
  "to": null,
  "watts": 250,
  "wheelchair": false,
}
`;

exports[`query getRoutingParams should create repaired routing params for broken flex query 1`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "WALK,FLEX_EGRESS,FLEX_ACCESS,FLEX_DIRECT,TRANSIT",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create repaired routing params for very broken flex query 1`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "FLEX_EGRESS,FLEX_ACCESS,FLEX_DIRECT,WALK,BIKE",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create repaired routing params for very broken flex query 2`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "FLEX_EGRESS,FLEX_ACCESS,FLEX_DIRECT,WALK,BIKE,WALK,TRANSIT,BUS",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for car rental query 1`] = `
Object {
  "arriveBy": false,
  "companies": "FAKECOMPANY",
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "minTransitDistance": "50%",
  "mode": "CAR_RENT,BUS,WALK",
  "onlyTransitTrips": true,
  "searchTimeout": 10000,
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for flex-only query 1`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "FLEX_EGRESS,FLEX_ACCESS,FLEX_DIRECT",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for intermediate places query 1`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "WALK,TRANSIT",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for personal micromobility query 1`] = `
Object {
  "arriveBy": false,
  "companies": "FAKECOMPANY",
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "MICROMOBILITY,BUS",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for personal micromobility query 2`] = `
Object {
  "arriveBy": false,
  "companies": "FAKECOMPANY",
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "SCOOTER,BUS",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for standard flex query 1`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "WALK,TRANSIT,FLEX_EGRESS,FLEX_ACCESS,FLEX_DIRECT",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for standard flex query 2`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "FLEX_EGRESS,FLEX_ACCESS,FLEX_DIRECT",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query getRoutingParams should create routing params for transit query 1`] = `
Object {
  "arriveBy": false,
  "date": "2020-08-24",
  "fromPlace": "Steamer Lane, Santa Cruz, CA, 95060, USA::36.95471026341096,-122.0248185852425",
  "mode": "WALK,TRANSIT",
  "time": "21:53",
  "toPlace": "Municipal Wharf St, Santa Cruz, CA, 95060, USA::36.961843106786766,-122.02402657342725",
}
`;

exports[`query parseLocationString should return location for valid input 1`] = `
Object {
  "lat": 33.983929829,
  "lon": -87.3892387982,
  "name": "123 Main St",
}
`;

exports[`query parseLocationString should return location with coordinates as name for coordinates-only input 1`] = `
Object {
  "lat": 33.983929829,
  "lon": -87.3892387982,
  "name": "33.98393, -87.38924",
}
`;

exports[`query parseLocationString should return null for null input 1`] = `null`;

exports[`query planParamsToQuery should parse a depart at query 1`] = `
Object {
  "bannedRoutes": "897ABC",
  "companies": "",
  "date": "2019-10-31",
  "departArrive": "DEPART",
  "from": Object {
    "lat": 45.517373,
    "lon": -122.675601,
    "name": "Guide Dogs for the Blind, Portland, OR, USA",
  },
  "ignoreRealtimeUpdates": "true",
  "maxWalkDistance": 1207,
  "mode": "BUS,TRAM,RAIL,GONDOLA,WALK",
  "optimize": "QUICK",
  "showIntermediateStops": "true",
  "time": "17:45",
  "to": Object {
    "lat": 45.519015,
    "lon": -122.679321,
    "name": "Weather Machine, Portland, OR, USA",
  },
  "ui_activeItinerary": 0,
  "ui_activeSearch": "irc7h4rb8",
  "walkSpeed": 1.34,
}
`;

exports[`query planParamsToQuery should parse a query with intermediate places 1`] = `
Object {
  "bannedRoutes": "897ABC",
  "companies": "",
  "date": "2019-10-31",
  "departArrive": "DEPART",
  "from": Object {
    "lat": 45.517373,
    "lon": -122.675601,
    "name": "Guide Dogs for the Blind, Portland, OR, USA",
  },
  "ignoreRealtimeUpdates": "true",
  "intermediatePlaces": Array [
    Object {
      "lat": 45.516202,
      "lon": -122.673247,
      "name": "Mill Ends Park, Downtown - Portland",
    },
    Object {
      "lat": 45.519094,
      "lon": -122.705692,
      "name": "International Rose Test Garden, Portland",
    },
  ],
  "maxWalkDistance": 1207,
  "mode": "BUS,TRAM,RAIL,GONDOLA,WALK",
  "optimize": "QUICK",
  "showIntermediateStops": "true",
  "time": "17:45",
  "to": Object {
    "lat": 45.519015,
    "lon": -122.679321,
    "name": "Weather Machine, Portland, OR, USA",
  },
  "ui_activeItinerary": 0,
  "ui_activeSearch": "irc7h4rb8",
  "walkSpeed": 1.34,
}
`;
